bin/fatecoder/grammar/FateCodeParser.ts
// Generated from grammar/FateCode.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { FateCodeListener } from "./FateCodeListener";
import { FateCodeVisitor } from "./FateCodeVisitor";


export class FateCodeParser extends Parser {
	public static readonly THEN = 1;
	public static readonly END = 2;
	public static readonly RETURN = 3;
	public static readonly REMEMBERING = 4;
	public static readonly VISIT = 5;
	public static readonly NO = 6;
	public static readonly WHEN = 7;
	public static readonly NUMERIC = 8;
	public static readonly LINKED = 9;
	public static readonly LINK = 10;
	public static readonly PATH = 11;
	public static readonly UNLINK = 12;
	public static readonly FROM = 13;
	public static readonly EQUAL = 14;
	public static readonly TO = 15;
	public static readonly JUMP = 16;
	public static readonly UPDATE = 17;
	public static readonly TRACK = 18;
	public static readonly ADD = 19;
	public static readonly SUBTRACT = 20;
	public static readonly START = 21;
	public static readonly AT = 22;
	public static readonly DECIDE = 23;
	public static readonly BETWEEN = 24;
	public static readonly CHOOSE = 25;
	public static readonly DQ = 26;
	public static readonly PLUS = 27;
	public static readonly MINUS = 28;
	public static readonly DOT = 29;
	public static readonly GT = 30;
	public static readonly LT = 31;
	public static readonly EQ = 32;
	public static readonly NUMBER = 33;
	public static readonly HEXNUMBER = 34;
	public static readonly FLOAT = 35;
	public static readonly LineComment = 36;
	public static readonly LABEL = 37;
	public static readonly STRING = 38;
	public static readonly IDENTIFIER = 39;
	public static readonly WS = 40;
	public static readonly RULE_program = 0;
	public static readonly RULE_numberedStatement = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_comment = 3;
	public static readonly RULE_identifier = 4;
	public static readonly RULE_lineNumber = 5;
	public static readonly RULE_returnStmt = 6;
	public static readonly RULE_number = 7;
	public static readonly RULE_string = 8;
	public static readonly RULE_visitStmt = 9;
	public static readonly RULE_jumpStmt = 10;
	public static readonly RULE_anchorExpr = 11;
	public static readonly RULE_addressExpr = 12;
	public static readonly RULE_labelExpr = 13;
	public static readonly RULE_whenNumericBlock = 14;
	public static readonly RULE_numericComparisonOperator = 15;
	public static readonly RULE_whenLinkedBlock = 16;
	public static readonly RULE_linkStmt = 17;
	public static readonly RULE_trackNumericStmt = 18;
	public static readonly RULE_trackLinkedStmt = 19;
	public static readonly RULE_updateNumericStmt = 20;
	public static readonly RULE_decideBlock = 21;
	public static readonly RULE_chooseBlock = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "numberedStatement", "statement", "comment", "identifier", 
		"lineNumber", "returnStmt", "number", "string", "visitStmt", "jumpStmt", 
		"anchorExpr", "addressExpr", "labelExpr", "whenNumericBlock", "numericComparisonOperator", 
		"whenLinkedBlock", "linkStmt", "trackNumericStmt", "trackLinkedStmt", 
		"updateNumericStmt", "decideBlock", "chooseBlock",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'THEN'", "'END'", "'RETURN'", "'REMEMBERING'", "'VISIT'", 
		"'NO'", "'WHEN'", "'NUMERIC'", "'LINKED'", "'LINK'", "'PATH'", "'UNLINK'", 
		"'FROM'", "'EQUAL'", "'TO'", "'JUMP'", "'UPDATE'", "'TRACK'", "'ADD'", 
		"'SUBTRACT'", "'START'", "'AT'", "'DECIDE'", "'BETWEEN'", "'CHOOSE'", 
		"'\"'", "'+'", "'-'", "'.'", "'>'", "'<'", "'=='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "THEN", "END", "RETURN", "REMEMBERING", "VISIT", "NO", "WHEN", 
		"NUMERIC", "LINKED", "LINK", "PATH", "UNLINK", "FROM", "EQUAL", "TO", 
		"JUMP", "UPDATE", "TRACK", "ADD", "SUBTRACT", "START", "AT", "DECIDE", 
		"BETWEEN", "CHOOSE", "DQ", "PLUS", "MINUS", "DOT", "GT", "LT", "EQ", "NUMBER", 
		"HEXNUMBER", "FLOAT", "LineComment", "LABEL", "STRING", "IDENTIFIER", 
		"WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(FateCodeParser._LITERAL_NAMES, FateCodeParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return FateCodeParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "FateCode.g4"; }

	// @Override
	public get ruleNames(): string[] { return FateCodeParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return FateCodeParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(FateCodeParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, FateCodeParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FateCodeParser.RETURN) | (1 << FateCodeParser.VISIT) | (1 << FateCodeParser.WHEN) | (1 << FateCodeParser.LINK) | (1 << FateCodeParser.UNLINK) | (1 << FateCodeParser.JUMP) | (1 << FateCodeParser.UPDATE) | (1 << FateCodeParser.TRACK) | (1 << FateCodeParser.DECIDE))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (FateCodeParser.NUMBER - 33)) | (1 << (FateCodeParser.HEXNUMBER - 33)) | (1 << (FateCodeParser.LineComment - 33)))) !== 0)) {
				{
				{
				this.state = 46;
				this.numberedStatement();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.match(FateCodeParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public numberedStatement(): NumberedStatementContext {
		let _localctx: NumberedStatementContext = new NumberedStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, FateCodeParser.RULE_numberedStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FateCodeParser.NUMBER || _la === FateCodeParser.HEXNUMBER) {
				{
				this.state = 54;
				this.lineNumber();
				}
			}

			this.state = 57;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, FateCodeParser.RULE_statement);
		try {
			this.state = 70;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 59;
				this.comment();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 60;
				this.trackNumericStmt();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 61;
				this.trackLinkedStmt();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 62;
				this.visitStmt();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 63;
				this.jumpStmt();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 64;
				this.whenNumericBlock();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 65;
				this.whenLinkedBlock();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 66;
				this.updateNumericStmt();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 67;
				this.linkStmt();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 68;
				this.returnStmt();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 69;
				this.decideBlock();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let _localctx: CommentContext = new CommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, FateCodeParser.RULE_comment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 72;
			this.match(FateCodeParser.LineComment);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, FateCodeParser.RULE_identifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.match(FateCodeParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lineNumber(): LineNumberContext {
		let _localctx: LineNumberContext = new LineNumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, FateCodeParser.RULE_lineNumber);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 76;
			_la = this._input.LA(1);
			if (!(_la === FateCodeParser.NUMBER || _la === FateCodeParser.HEXNUMBER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public returnStmt(): ReturnStmtContext {
		let _localctx: ReturnStmtContext = new ReturnStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, FateCodeParser.RULE_returnStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(FateCodeParser.RETURN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number(): NumberContext {
		let _localctx: NumberContext = new NumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, FateCodeParser.RULE_number);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FateCodeParser.PLUS || _la === FateCodeParser.MINUS) {
				{
				this.state = 80;
				_la = this._input.LA(1);
				if (!(_la === FateCodeParser.PLUS || _la === FateCodeParser.MINUS)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
			}

			this.state = 83;
			_la = this._input.LA(1);
			if (!(_la === FateCodeParser.NUMBER || _la === FateCodeParser.FLOAT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, FateCodeParser.RULE_string);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(FateCodeParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public visitStmt(): VisitStmtContext {
		let _localctx: VisitStmtContext = new VisitStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, FateCodeParser.RULE_visitStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.match(FateCodeParser.VISIT);
			this.state = 88;
			this.anchorExpr();
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FateCodeParser.REMEMBERING) {
				{
				this.state = 89;
				this.match(FateCodeParser.REMEMBERING);
				this.state = 90;
				this.anchorExpr();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jumpStmt(): JumpStmtContext {
		let _localctx: JumpStmtContext = new JumpStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, FateCodeParser.RULE_jumpStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(FateCodeParser.JUMP);
			this.state = 94;
			this.anchorExpr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public anchorExpr(): AnchorExprContext {
		let _localctx: AnchorExprContext = new AnchorExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, FateCodeParser.RULE_anchorExpr);
		try {
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case FateCodeParser.HEXNUMBER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 96;
				this.addressExpr();
				}
				break;
			case FateCodeParser.LABEL:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 97;
				this.labelExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public addressExpr(): AddressExprContext {
		let _localctx: AddressExprContext = new AddressExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, FateCodeParser.RULE_addressExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(FateCodeParser.HEXNUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public labelExpr(): LabelExprContext {
		let _localctx: LabelExprContext = new LabelExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, FateCodeParser.RULE_labelExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(FateCodeParser.LABEL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whenNumericBlock(): WhenNumericBlockContext {
		let _localctx: WhenNumericBlockContext = new WhenNumericBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, FateCodeParser.RULE_whenNumericBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this.match(FateCodeParser.WHEN);
			this.state = 105;
			this.match(FateCodeParser.NUMERIC);
			this.state = 106;
			this.identifier();
			this.state = 107;
			this.numericComparisonOperator();
			this.state = 108;
			this.number();
			this.state = 109;
			this.match(FateCodeParser.THEN);
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 110;
				this.statement();
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FateCodeParser.RETURN) | (1 << FateCodeParser.VISIT) | (1 << FateCodeParser.WHEN) | (1 << FateCodeParser.LINK) | (1 << FateCodeParser.UNLINK) | (1 << FateCodeParser.JUMP) | (1 << FateCodeParser.UPDATE) | (1 << FateCodeParser.TRACK) | (1 << FateCodeParser.DECIDE))) !== 0) || _la === FateCodeParser.LineComment);
			this.state = 115;
			this.match(FateCodeParser.END);
			this.state = 116;
			this.match(FateCodeParser.WHEN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public numericComparisonOperator(): NumericComparisonOperatorContext {
		let _localctx: NumericComparisonOperatorContext = new NumericComparisonOperatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, FateCodeParser.RULE_numericComparisonOperator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			_la = this._input.LA(1);
			if (!(((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (FateCodeParser.GT - 30)) | (1 << (FateCodeParser.LT - 30)) | (1 << (FateCodeParser.EQ - 30)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whenLinkedBlock(): WhenLinkedBlockContext {
		let _localctx: WhenLinkedBlockContext = new WhenLinkedBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, FateCodeParser.RULE_whenLinkedBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this.match(FateCodeParser.WHEN);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FateCodeParser.NO) {
				{
				this.state = 121;
				this.match(FateCodeParser.NO);
				}
			}

			this.state = 124;
			this.identifier();
			this.state = 125;
			_la = this._input.LA(1);
			if (!(_la === FateCodeParser.LINK || _la === FateCodeParser.PATH)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 126;
			this.match(FateCodeParser.FROM);
			this.state = 127;
			this.string();
			this.state = 128;
			this.match(FateCodeParser.TO);
			this.state = 129;
			this.string();
			this.state = 130;
			this.match(FateCodeParser.THEN);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 131;
				this.statement();
				}
				}
				this.state = 134;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FateCodeParser.RETURN) | (1 << FateCodeParser.VISIT) | (1 << FateCodeParser.WHEN) | (1 << FateCodeParser.LINK) | (1 << FateCodeParser.UNLINK) | (1 << FateCodeParser.JUMP) | (1 << FateCodeParser.UPDATE) | (1 << FateCodeParser.TRACK) | (1 << FateCodeParser.DECIDE))) !== 0) || _la === FateCodeParser.LineComment);
			this.state = 136;
			this.match(FateCodeParser.END);
			this.state = 137;
			this.match(FateCodeParser.WHEN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public linkStmt(): LinkStmtContext {
		let _localctx: LinkStmtContext = new LinkStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, FateCodeParser.RULE_linkStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			_la = this._input.LA(1);
			if (!(_la === FateCodeParser.LINK || _la === FateCodeParser.UNLINK)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 140;
			this.identifier();
			this.state = 141;
			this.match(FateCodeParser.FROM);
			this.state = 142;
			this.string();
			this.state = 143;
			this.match(FateCodeParser.TO);
			this.state = 144;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public trackNumericStmt(): TrackNumericStmtContext {
		let _localctx: TrackNumericStmtContext = new TrackNumericStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, FateCodeParser.RULE_trackNumericStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(FateCodeParser.TRACK);
			this.state = 147;
			this.match(FateCodeParser.NUMERIC);
			this.state = 148;
			this.identifier();
			this.state = 152;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FateCodeParser.START) {
				{
				this.state = 149;
				this.match(FateCodeParser.START);
				this.state = 150;
				this.match(FateCodeParser.AT);
				this.state = 151;
				this.number();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public trackLinkedStmt(): TrackLinkedStmtContext {
		let _localctx: TrackLinkedStmtContext = new TrackLinkedStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, FateCodeParser.RULE_trackLinkedStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(FateCodeParser.TRACK);
			this.state = 155;
			this.match(FateCodeParser.LINKED);
			this.state = 156;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public updateNumericStmt(): UpdateNumericStmtContext {
		let _localctx: UpdateNumericStmtContext = new UpdateNumericStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, FateCodeParser.RULE_updateNumericStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			this.match(FateCodeParser.UPDATE);
			this.state = 159;
			this.match(FateCodeParser.NUMERIC);
			this.state = 160;
			this.identifier();
			this.state = 161;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FateCodeParser.TO) | (1 << FateCodeParser.ADD) | (1 << FateCodeParser.SUBTRACT))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
